language/move-lang/tests/move_check/borrows/return_mutual_borrows_invalid.exp
error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:14:17 ───
    │
 15 │         (s1, f)
    │         ^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 14 │         let f = freeze(s1);
    │                 ---------- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:18:17 ───
    │
 19 │         (s1, f)
    │         ^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 18 │         let f = &s1.f;
    │                 ----- Field 'f' is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:22:17 ───
    │
 23 │         (&mut s1.f, f)
    │         ^^^^^^^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 22 │         let f = &s1.f;
    │                 ----- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:26:17 ───
    │
 27 │         (&mut s1.f, f)
    │         ^^^^^^^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 26 │         let f = id(&s1.f);
    │                 --------- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:31:9 ───
    │
 31 │         (s1, s1)
    │         ^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 31 │         (s1, s1)
    │          -- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:34:18 ───
    │
 35 │         (s1, f)
    │         ^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 34 │         let f =  &mut s1.f;
    │                  --------- Field 'f' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:38:9 ───
    │
 38 │         (&mut s1.f, s1)
    │         ^^^^^^^^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 38 │         (&mut s1.f, s1)
    │          --------- Field 'f' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:41:9 ───
    │
 41 │         (id_mut(s1), s1)
    │         ^^^^^^^^^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 41 │         (id_mut(s1), s1)
    │          ---------- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:44:17 ───
    │
 45 │         (s1, f)
    │         ^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 44 │         let f = id_mut(&mut s1.f);
    │                 ----------------- Field 'f' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/return_mutual_borrows_invalid.move:48:9 ───
    │
 48 │         (id_mut(&mut s1.f), s1)
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid return of reference. Cannot transfer a mutable reference that is being borrowed
    ·
 48 │         (id_mut(&mut s1.f), s1)
    │          ----------------- Field 'f' is still being mutably borrowed by this reference
    │

